# learn-computer-vision-huggingface

./: README.md  pyproject.toml
notebooks/: 1.0-vgg-19.ipynb  1.2-mobile-net.ipynb  2.0-google-net.ipynb
